20040709 configure.in: bump version number to 0.7.0pre1.
20040709 TAG: Release-0_7_0pre1
20040710 ui/fb/fbui.c: #include <errno.h> and <string.h>
20040715 ui/svga/svgajoystick.c: fix up for new input layer (Darren).
20040715 ChangeLog,README,man/fuse.1: more 0.7.0 doc updates.
20040715 pokefinder/pokefinder.c,ui/gtk/pokefinder.c: allow pokefinder to
	 search all 272K of normal RAM.
20040715 autogen.sh: copy auxiliary files rather than linking them.
20040715 man/fuse.1: Fix typo in pokefinder section.
20040716 rzx.c: change over to using the release RZX signing key.
20040716 configure.in: bump version number to 0.7.0.
20040716 gtkjoystick.c: add delete-event handler (thanks, Darren).
20040717 ui/fb/fbkeyboard.c: support Tab (Darren).
20040719 ui/fb/fbdisplay.c: check FRAMEBUFFER environment variable for
	 framebuffer device to use (Darren).
20040719 ui/fb/fbdisplay.c: hide/restore cursor on startup/exit (Darren).
20040719 ui/fb/fbdisplay.c: remove unused variables (Darren).
20040719 ui/xlib/xui.c: catch window close events (Darren).
20040720 ui.c: fix missing return value (Darren).
20040720 ui/fb/fbdisplay.c: generate palette dynamically (Darren).
20040720 widget/select.c: stop cursor at correct bottom limit (Darren).
20040720 rzx.c: change back to the RZX test key.
20040720 ui/fb/fbdisplay.c: Timex rendering fixes (Darren).
20040720 settings.dat,man/fuse.1,ui/fb/fbdisplay.c,ui/svga/svgadisplay.c:
	 optionally use doublescan modes for SVGAlib and fb (Darren).
20040720 tape.c: improve 'tape modified' confirmation message (Darren).
20040721 ui/gtk/{Makefile.am,binary.c,browse.c,confirm.c,debugger.c,
	 gtkinternals.h,gtkjoystick.c,gtkui.c,memory.c,options.pl,
	 picture.c,pokefinder.c,roms.c,stock.c}: factor out common button
	 creation code. Add GTK+ 2.x stock buttons (Darren).
20040721 ui/fb/fbkeyboard.c: restore old keyboard mode on exit.
20040721 ui/gtk/pixmaps.c: #include <config.h>
20040721 ula.c: Add issue 2 keyboard snapshot support.