@@ -1027,3 +1027,4 @@
 20040721 ui/fb/fbkeyboard.c: restore old keyboard mode on exit.
 20040721 ui/gtk/pixmaps.c: #include <config.h>
 20040721 ula.c: Add issue 2 keyboard snapshot support.
+20040722 ui/fb/fbdisplay.c: improve error messages slightly.
